--- a/generators/angular/templates/src/main/webapp/app/entities/_entityFolder_/list/_entityFile_.ts.ejs
+++ b/generators/angular/templates/src/main/webapp/app/entities/_entityFolder_/list/_entityFile_.ts.ejs
@@ -29,12 +29,13 @@
 
   const componentName = entityAngularName;
 _%>
-import { Component, computed, effect, inject, OnInit, signal, WritableSignal } from '@angular/core';
+import { Component, computed, DestroyRef, effect, inject, OnInit, signal, WritableSignal } from '@angular/core';
+import { takeUntilDestroyed } from '@angular/core/rxjs-interop';
 <%_ if (!paginationNo) { _%>
 import { HttpHeaders } from '@angular/common/http';
 <%_ } _%>
 import { ActivatedRoute, Data, ParamMap, Router, RouterLink } from '@angular/router';
-import { <%_ if (!paginationInfiniteScroll) { _%>catchError, <%_ } _%>combineLatest<%_ if (!readOnly) { _%>, filter<%_ } _%><%_ if (!paginationInfiniteScroll) { _%>, EMPTY<%_ } _%>, finalize, Observable<%_ if (!paginationInfiniteScroll) { _%>, Subject<%_ } _%>, Subscription<%_ if (!paginationInfiniteScroll) { _%>, switchMap<%_ } _%>, tap } from 'rxjs';
+import { <%_ if (!paginationInfiniteScroll) { _%>catchError, <%_ } _%>combineLatest<%_ if (!readOnly) { _%>, filter<%_ } _%><%_ if (!paginationInfiniteScroll) { _%>, EMPTY<%_ } _%>, finalize, Observable<%_ if (!paginationInfiniteScroll) { _%>, Subject<%_ } _%><%_ if (!paginationInfiniteScroll) { _%>, switchMap<%_ } _%>, tap } from 'rxjs';
 <%_ if (!readOnly) { _%>
 import { NgbModal } from '@ng-bootstrap/ng-bootstrap';
 <%_ } _%>
@@ -135,7 +136,6 @@ export class <%= componentName %> implements OnInit {
     private static readonly NOT_SORTABLE_FIELDS_AFTER_SEARCH = [<%- notSortableFieldsAfterSearch %>];
 
 <%_ } _%>
-    subscription: Subscription | null = null;
 <%_ if (!paginationInfiniteScroll) { _%>
     loadTrigger$ = new Subject<void>();
 <%_ } _%>
@@ -165,6 +165,7 @@ export class <%= componentName %> implements OnInit {
     protected readonly <%= entityInstance %>Service = inject(<%= entityAngularName %>Service);
     protected readonly activatedRoute = inject(ActivatedRoute);
     protected readonly sortService = inject(SortService);
+    protected readonly destroyRef = inject(DestroyRef);
 <%_ if (paginationInfiniteScroll) { _%>
     protected parseLinks = inject(ParseLinks);
 <%_ } _%>
@@ -187,11 +188,12 @@ export class <%= componentName %> implements OnInit {
             this.isLoading.set(false);
             return EMPTY;
           })
-        ))
+        )),
+        takeUntilDestroyed(this.destroyRef)
       ).subscribe((res: EntityArrayResponseType) => this.onResponseSuccess(res));
 
 <%_ } _%>
-      this.subscription = combineLatest([this.activatedRoute.queryParamMap, this.activatedRoute.data]).pipe(
+      combineLatest([this.activatedRoute.queryParamMap, this.activatedRoute.data]).pipe(
         tap(([params, data]) => this.fillComponentAttributeFromRoute(params, data)),
 <%_ if (paginationInfiniteScroll) { _%>
         tap(() => this.reset()),
@@ -207,10 +209,13 @@ export class <%= componentName %> implements OnInit {
           }
         }),
 <%_ } _%>
+        takeUntilDestroyed(this.destroyRef)
       ).subscribe();
 
 <% if (jpaMetamodelFiltering && paginationPagination) { %>
-      this.filters.filterChanges.subscribe(filterOptions => this.handleNavigation(1, this.sortState(), filterOptions));
+      this.filters.filterChanges.pipe(
+        takeUntilDestroyed(this.destroyRef)
+      ).subscribe(filterOptions => this.handleNavigation(1, this.sortState(), filterOptions));
 <%_ } _%>
     }
 
